; ModuleID = '/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_thread_new.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_thread_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CONFIG_LWIP_TCPIP_TASK_AFFINITY = common dso_local global i32 0, align 4
@pdTRUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @sys_thread_new(i8* %0, i32 %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  store i8* %0, i8** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load i8*, i8** %7, align 8
  %16 = load i32, i32* %10, align 4
  %17 = load i8*, i8** %9, align 8
  %18 = load i32, i32* %11, align 4
  %19 = load i32, i32* @CONFIG_LWIP_TCPIP_TASK_AFFINITY, align 4
  %20 = call i64 @xTaskCreatePinnedToCore(i32 %14, i8* %15, i32 %16, i8* %17, i32 %18, i32* %12, i32 %19)
  store i64 %20, i64* %13, align 8
  %21 = load i64, i64* %13, align 8
  %22 = load i64, i64* @pdTRUE, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %5
  store i32* null, i32** %6, align 8
  br label %29

25:                                               ; preds = %5
  %26 = load i32, i32* %12, align 4
  %27 = sext i32 %26 to i64
  %28 = inttoptr i64 %27 to i32*
  store i32* %28, i32** %6, align 8
  br label %29

29:                                               ; preds = %25, %24
  %30 = load i32*, i32** %6, align 8
  ret i32* %30
}

declare dso_local i64 @xTaskCreatePinnedToCore(i32, i8*, i32, i8*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
